<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_info"
        android:src="@drawable/main_back"
        android:scaleType="fitXY"/>

    <ImageButton
        android:id="@+id/back_clicker"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_info"
        android:foreground="@drawable/rounded_clicker"
        android:scaleType="centerCrop"
        android:src="@drawable/back_clicker" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignTop="@+id/back_clicker"
        android:layout_alignBottom="@+id/back_clicker"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/privacy_info"
        android:foreground="@drawable/rounded_clicker"
        android:scaleType="centerInside"
        android:src="@drawable/privacy_text" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignTop="@+id/back_clicker"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="32dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:background="@drawable/pokies_back">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/privacy_data" />
    </ScrollView>


</RelativeLayout>