<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/spin_clicker"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/spin_clicker"
        android:textAllCaps="true"
        android:backgroundTint="@color/primary"
        android:textColor="@color/secondary"/>

    <LinearLayout
        android:id="@+id/win_data_handler"
        android:layout_width="82dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_toEndOf="@+id/spin_clicker"
        android:background="@drawable/data_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/win_title"/>
        <TextView
            android:id="@+id/win_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/primary"
            android:textAllCaps="true"
            tools:text="1932"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bank_data_handler"
        android:layout_width="82dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_toEndOf="@+id/win_data_handler"
        android:background="@drawable/data_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/bank_title"/>
        <TextView
            android:id="@+id/bank_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/primary"
            android:textAllCaps="true"
            tools:text="1932"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minus_clicker"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:foreground="@drawable/rounded_clicker"
        android:textColor="@color/black"
        android:background="@drawable/bet_clicker_back"
        android:text="@string/minus"
        android:textSize="34sp"
        android:layout_toEndOf="@+id/bank_data_handler"/>
    <LinearLayout
        android:id="@+id/bet_data_handler"
        android:layout_width="82dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_toEndOf="@+id/minus_clicker"
        android:background="@drawable/data_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/bet_title"/>
        <TextView
            android:id="@+id/bet_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/primary"
            android:textAllCaps="true"
            tools:text="1932"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus_clicker"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:foreground="@drawable/rounded_clicker"
        android:background="@drawable/bet_clicker_back"
        android:text="@string/plus"
        android:textSize="34sp"
        android:layout_toEndOf="@+id/bet_data_handler"/>



</RelativeLayout>